# codecrafters-claude-code-python

./: README.md  pyproject.toml
.codecrafters/: run.sh
app/: main.py  tools.py
tests/: test_tools.py
